# devskim

./: .pre-commit-config.yaml  LICENSE  README.md  config.example.toml  demo.tape  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  codeql.yml  demo.yml  release.yml  vhs.yml
devskim/: app.py  config.py  main.py  seen.py
devskim/sources/: comments.py  github.py  hn.py  lobsters.py  reddit.py
devskim/widgets/: __init__.py  comments_modal.py  content_modal.py  feed.py  post_split_modal.py  story.py
grokfeed/: app.py  clipboard.py  config.py  main.py  seen.py
grokfeed/sources/: __init__.py  comments.py  github.py  hn.py  lobsters.py  reddit.py
grokfeed/widgets/: __init__.py  comments_modal.py  content_modal.py  feed.py  post_split_modal.py  story.py
tests/: test_app_theme.py  test_clipboard.py  test_comments.py  test_config.py  test_interleave.py  test_main.py  test_progressive.py  test_search.py  test_seen.py  test_sources_github.py  test_sources_hn.py  test_sources_lobsters.py  test_sources_reddit.py  test_story.py  test_widgets.py
