[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokfeed"
version = "0.1.0"
description = "Hacker News + Reddit terminal feed viewer"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx[http2]>=0.27.0",
    "click>=8.0.0",
    "orjson>=3.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
grokfeed = "grokfeed.main:app"

[tool.hatch.build.targets.wheel]
packages = ["grokfeed"]
