[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devskim"
version = "0.6.1"
description = "Hacker News + Reddit + lobste.rs terminal feed viewer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eleni Markou", email = "eamarkou@gmail.com" }]
keywords = ["hacker-news", "reddit", "lobsters", "tui", "terminal", "feed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals",
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx[http2]>=0.27.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/emarkou/devskim"
Repository = "https://github.com/emarkou/devskim"
Issues = "https://github.com/emarkou/devskim/issues"

[project.scripts]
devskim = "devskim.main:app"

[tool.hatch.build.targets.wheel]
packages = ["devskim"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["devskim"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
